final changes EX2